--- a/index.html
+++ b/index.html
@@ -65,17 +65,17 @@
         <div class="features-box col-lg-4 col-md-4 col-sm-12">
           <i class="feature-icon fas fa-star fa-4x"></i>
           <h3 class="feature-list">Great Service</h3>
-          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam, veritatis.</p>
+          <p>Fast and reliable customer service.</p>
         </div>
         <div class="features-box col-lg-4 col-md-4 col-sm-12">
           <i class="feature-icon fas fa-bullseye fa-4x"></i>
           <h3 class="feature-list">On Point</h3>
-          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam, veritatis.</p>
+          <p>We provide the best when it comes to the quality of our products.</p>
         </div>
         <div class="features-box col-lg-4 col-md-4 col-sm-12">
           <i class="feature-icon fas fa-user-check fa-4x"></i>
           <h3 class="feature-list">Professional Consultants</h3>
-          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam, veritatis.</p>
+          <p>Competent and expert consultants that can help provide you the best value for your money.</p>
         </div>
       </div>
     </div>
@@ -90,13 +90,13 @@
       <div class="container-fluid">
         <div class="carousel-inner">
             <div class="carousel-item active">
-              <h2>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore odit sit, doloribus natus culpa amet.</h2>
+              <h2>Trusted by the top 500 companies of the Philippines. #LetLeniLead</h2>
               <img class="testimonials-image" src="images/female-img.jpg" alt="testimonial1" class="testimonial-image">
               <em>Marie, Sales Manager</em>
               
             </div>
             <div class="carousel-item">
-              <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus necessitatibus sed molestias vero, iure quidem.</h2>
+              <h2>We provide only the best, money-back guaranteed if we disappoint.</h2>
               <img class="testimonials-image" src="images/male-img.jpg" alt="testimonial2" class="testimonial-image">
               <em>Dean, CEO</em>
             </div>
